Test only CLI executable in GitHub workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,4 +21,4 @@ jobs:
         run: go build -v ./cmd/apocli
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./cmd/apocli
